# arch-avanzate

./: .gitignore  README.md  run_profiling.sh  test.py
ProgettoGruppo9/: README.md  pyproject.toml  setup.py
ProgettoGruppo9/src/32/: .gitignore  CON_BLOCKING.txt  andBitABit.nasm  cmp.py  compila.sh  dEuclidea.nasm  dEuclideaLU.nasm  dEuclidead.nasm  dEuclideaf.nasm  dEuclideafLU.nasm  distApprossimata.nasm  distanzaPreQ.nasm  generateData  generate_data.c  get_d_k_max.nasm  get_d_k_maxf.nasm  main  main.c  operazioniVettoriali.c  out_distnn.ds2  out_idnn.ds2  perf.data.old  prodScalare.nasm  prodScalareLU.nasm  prodScalared.nasm  prodScalaref.nasm  prodScalarefLU.nasm  quantize.c  quantpivot  quantpivot32.c  quantpivot32.nasm  quantpivot32_py.c  run.sh  stat.txt  stress_test.sh  trovaMassimod.nasm  trovaMassimof.nasm  verifica.c  ù
ProgettoGruppo9/src/32/include/: operazioniVettoriali.h  quantize.h
ProgettoGruppo9/src/64/: dEuclidead.nasm  dEuclideaf.nasm  dEuclideafLU.nasm  distApprossimata.nasm  generataData  generateData  get_d_k_maxd.nasm  get_d_k_maxf.nasm  main.c  quantpivot  quantpivot32.c  quantpivot64.c  quantpivot64_py.c  risultatiCacheBlocking.txt  stress_test.sh  trovaMassimod.nasm  trovaMassimof.nasm  verifica.sh
ProgettoGruppo9/src/64omp/: dEuclidead.nasm  generate_data  get_d_k_maxd.nasm  get_d_k_maxf.nasm  main.c  quantize.c  quantpivot  quantpivot32.c  quantpivot64omp.c  quantpivot64omp_py.c  trovaMassimod.nasm  valgrind.txt  verifica
src/: main.c
