[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = 'gruppo9'
version = "1.0"
authors = [
    {name = "Francesco Tieri", email = "trifnc03r30d005g@studenti.unical.it"},
    {name = "Pasquale Fiore", email = "fripql03s05a944o@studenti.unical.it"},
    {name = "Christian Bruni", email = "brncrs03s13d086m@studenti.unical.it"},
]
description = "Quantized Index for K-NN search"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = ["numpy"]
